2004-01-22  Shiro Kawai  <shiro@acm.org>

	* src/kahua/server.scm (kahua-default-handler): process error-proc's
	result by render-proc, so that error-proc can return [SXML].

	* src/kahua-server.in (kahua-error-proc): new parameter to customize
	error-handling routine.
	
	* src/kahua/persistence.scm (initialize): fixed a problem when
	class definition is changed to remove an existing slot.

	* src/kahua/server.scm (form/cont): allow to pass extra parameters
	to the continuation closure, much like a/cont.

	* src/kahua/util.scm: added.
	* src/kahua.scm: added kahua.util

2004-01-20  Shiro Kawai  <shiro@acm.org>

	* cgi/kahua.cgi.in (compose-reply): pass through the extra
	headers given in the reply.
	(get-path-info): fixed a problem when PATH_INFO is "/".
	(server-uri): pass the server's absolute uri to the application
	server via "x-kahua-server-uri" header.
	
	* src/kahua/server.scm :
	(kahua-default-handler): let render-proc return (Stree, Context)
	instead of just Stree, so that it can inject information into
	Context.   Specifically, a context "extra-headers" is used
	as an additional header fields of reply message.
	(extra-header): a new SXML element, which doesn't produce any
	visual node but just inject a reply header.
	(define-entry): added support of :rest argument.
	(kahua-server-uri): provided the means to extract server's absolute
	uri, which is passed from kahua.cgi.
	(kahua-self-uri, kahua-self-uri-full): added.  utilities to build
	self-referencing uri.
	
	* test/server.scm : updated accordingly.

	* src/Makefile.in (SCMFILES): install kahua/test/*.scm as well.

2004-01-18  Shiro Kawai  <shiro@acm.org>

	* src/kahua/server.scm : removed bogus reference to kahua.app module.

2004-01-15  Shiro Kawai  <shiro@acm.org>

	* src/kahua/html.scm : merged into kahua/server.scm
	* src/kahua/server.scm :
	(kahua-current-context) : context is kept in this global parameter.
	(kahua-default-handler) : changed calling convention of content